feat: refactors code a lil bit